# datadrift

./: CLAUDE.md  README.md  pyproject.toml
datadrift/: cli.py  drift.py  globmatch.py  specs.py  workgraph.py
tests/: test_drift.py  test_imports.py
